test/files/events-exp-lang-neg/bind-function.check
bind-function.scala:9: error: rhs is not an event
  evt e1() = m()
              ^
one error found
